make split calculator files #3

--- a/split-calculator/split-calculator.html
+++ b/split-calculator/split-calculator.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> This is the split calculator</h1>
-    <script src="./split-calculator.js"></script>
+    <script type="text/javascript" src="./split-calculator.js"></script>
 </body>
 </html>
