make pace functionality

--- a/split-calculator/split-calculator.html
+++ b/split-calculator/split-calculator.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="demo"></p>
     <script type="text/javascript" src="./split-calculator.js"></script>
+
 </body>
 </html>
