home page layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RunHub</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">
+            <img src="./pictures/High Resolution Logo - Transparent Background.png" alt="RunHub">
+        </div>
+        <div class="links">
+            <ul>
+                <li>Page 1</li>
+                <li>Page 2</li>
+                <li>Page 3</li>
+            </ul>
+        </div>
+    </div>
+    <div class="blocks">
+        <div class="top_3_blocks">
+            <div class="left">
+              <div class="page1">
+                page1
+              </div>
+            </div>
+            <div class="right">
+              <div class="page2">
+                page2
+              </div>
+              <div class="page3">
+                page3
+              </div>
+            </div>
+        </div>
+        <div class="bottom_block">
+            <div class="page4">
+                page4
+            </div>
+        </div>
+    </div>
 </body>
 </html>
