#3 make split calculator work

--- a/split-calculator/split-calculator.html
+++ b/split-calculator/split-calculator.html
@@ -19,7 +19,7 @@
             <label for="hr">Hr</label>
             <input type="number" id="hr">
             <label for="min">min</label>
-            <input type="number" id="minutes">
+            <input type="number" id="min">
             <label for="sec">s</label>
             <input type="number" id="sec">
         </div>
@@ -29,6 +29,7 @@
         </div>
         <button type="button" id="split-submit">Calculate</button>
     </form>
+    <div id="grid-container"></div>
     <script type="text/javascript" src="./split-calculator.js"></script>
 
 </body>
