--- a/index.html
+++ b/index.html
@@ -24,21 +24,46 @@
         <div class="top_3_blocks">
             <div class="left">
               <div class="page1">
-                page1
+                <div class="description">
+                  <div class="question">
+                    What is Run Hub:
+                  </div>
+                  <div class="answer">
+Run Hub is a website for runners to access all the information they need.
+
+A single stop for all runners to access for calculators/content throughout the internet for the SHellHacks Hackathon
+                    </div>
+                    <div class="list">
+                      <div class="title">
+                        Features of Run Hub:
+                      </div>
+                      <ul>
+                        <li>A split calculator to generate split/paces</li>
+                        <li>A temperature/humidity affect calculator</li>
+                        <li>A pace calculator based on fitness level</li>
+                      </ul>
+                    </div>
+                </div>
               </div>
             </div>
             <div class="right">
-              <div class="page2">
-                page2
+              <div class="pic1">
+                <img src="./pictures/RunningPic2.jpg">
+                <div class="page2">
+                  Split Calculator
+                </div>
               </div>
-              <div class="page3">
-                page3
+              <div class="pic2">
+                <img src="./pictures/RunningPic1.jpg">
+                <div class="page3">
+                  Heart Rate Zone Calculator
+                </div>
               </div>
             </div>
         </div>
-        <div class="bottom_block">
+        <div class="pic3">
             <div class="page4">
-                page4
+                3rd feature goes here
             </div>
         </div>
     </div>
