--- a/hr-zones/hr.html
+++ b/hr-zones/hr.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <form id="hr-zones-form">
-        <label for="max-hr">Enter Maximum Heart Rate:</label>
-        <input type="number" id="max-hr" value="0">
+        <div class="form-container">
+            <label for="max-hr">Enter Maximum Heart Rate:</label>
+            <input type="number" id="max-hr" value="0">
+        </div>
         <button type="button" id="hr-submit">Calculate</button>
     </form>
     <div id="zone-displays">
