--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Hub</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div>Test</div>
+    <div class="main1">
+        <!-- <div class="blur-video">
+            <video id="blur-video" autoplay muted>
+                <source src="./pictures/Inspirational Running Video (HD)_trim.mp4" type="video/mp4">
+            </video>
+        </div> -->
+        <div class="video">
+            <video autoplay muted loop>
+                <source src="./pictures/Inspirational Running Video (HD)_trim.mp4" type="video/mp4">
+            </video>
+            <div class="video-overlay">
+                <div class="overlay-text-header">The World is Running</div>
+                <div class="overlay-text">Will you join?</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
