--- a/index.html
+++ b/index.html
@@ -24,5 +24,25 @@
             </div>
         </div>
     </div>
+    <div class="main2">
+        <div class="about">
+            <img src="./pictures/High Resolution Logo - Transparent Background.png">
+        </div>
+        <div class="split-link">
+            Split Calculator
+        </div>
+        <div class="hr-link">
+            Heart Rate Zone Calculator
+        </div>
+        <div class="pic1">
+            <img src="./pictures/RunningPic1.jpg">
+        </div>
+        <div class="pic2">
+            <img src="./pictures/RunningPic2.jpg">
+        </div>
+        <div class="pic3">
+            <img src="./pictures/prefontaine.jpg">
+        </div>
+    </div>
 </body>
 </html>
