We are a failure

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="main2">
         <div class="about">
-            <img src="./pictures/High Resolution Logo - Transparent Background.png">
+            <img id="logo" src="./pictures/High Resolution Logo - Transparent Background.png">
         </div>
         <div class="split-link">
             Split Calculator
