--- a/split-calculator/split-calculator.html
+++ b/split-calculator/split-calculator.html
@@ -4,33 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Run Hub</title>
+    <title>RunHub</title>
     <link rel="stylesheet" href="./split-calculator.css">
 </head>
 <body>
-    <p id="demo"></p>
-
-    <form id="split-input">
-        <div class="distance-div">
-            <label for="distance">Distance (Km)</label>
-            <input type="number" id="distance">
-        </div>
-        <div class="time-div">
-            <label for="hr">Hr</label>
-            <input type="number" id="hr">
-            <label for="min">min</label>
-            <input type="number" id="min">
-            <label for="sec">s</label>
-            <input type="number" id="sec">
-        </div>
-        <div class="split-div">
-            <label for="split-dist">Split Length (Km)</label>
-            <input type="number" id="split-dist">
-        </div>
-        <button type="button" id="split-submit">Calculate</button>
-    </form>
-    <div id="grid-container"></div>
-    <script type="text/javascript" src="./split-calculator.js"></script>
-
+    <div class="title">
+        Split Calculator
+    </div>
+    <div class="split">
+        <form id="split-input">
+            <div class="distance-div">
+                <label for="distance">Distance (Km)</label>
+                <input type="number" id="distance">
+            </div>
+            <div class="time-div">
+                <label for="hr">Hr</label>
+                <input type="number" id="hr">
+                <label for="min">Min</label>
+                <input type="number" id="min">
+                <label for="sec">Sec</label>
+                <input type="number" id="sec">
+            </div>
+            <div class="split-div">
+                <label for="split-dist">Split Length (Km)</label>
+                <input type="number" id="split-dist">
+            </div>
+            <button type="button" id="split-submit">Calculate</button>
+            <div id="grid-container"></div>
+        </form>
+        <script type="text/javascript" src="./split-calculator.js"></script>
+    </div>
 </body>
 </html>
