--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="main1">
+        
         <!-- <div class="blur-video">
             <video id="blur-video" autoplay muted>
                 <source src="./pictures/Inspirational Running Video (HD)_trim.mp4" type="video/mp4">
@@ -19,30 +20,35 @@
                 <source src="./pictures/Inspirational Running Video (HD)_trim.mp4" type="video/mp4">
             </video>
             <div class="video-overlay">
-                <div class="overlay-text-header">The World is Running</div>
-                <div class="overlay-text">Will you join?</div>
+                <div class="overlay-text-header">Welcome to Run Hub</div>
+                <div class="overlay-text"></div>
             </div>
         </div>
     </div>
     <div class="main2">
         <div class="about">
             <img id="logo" src="./pictures/High Resolution Logo - Transparent Background.png">
+            <div class="about-text">
+                Welcome To RunHub!
+                <br>
+                The center for all of your running needs
+            </div>
         </div>
-        <div class="split-link">
+        <!-- <div class="split-link">
             Split Calculator
         </div>
         <div class="hr-link">
             Heart Rate Zone Calculator
-        </div>
+        </div> -->
         <div class="pic1">
             <img src="./pictures/RunningPic1.jpg">
         </div>
         <div class="pic2">
             <img src="./pictures/RunningPic2.jpg">
         </div>
-        <div class="pic3">
+        <!-- <div class="pic3">
             <img src="./pictures/prefontaine.jpg">
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
