--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="about">
             <img id="logo" src="./pictures/High Resolution Logo - Transparent Background.png">
             <div class="about-text">
-                Welcome To RunHub!
+                Click the right image for a split calculator
                 <br>
-                The center for all of your running needs
-            </div>
+                Click the bottom image for a heart rate zone calculator           
+             </div>
         </div>
         <!-- <div class="split-link">
             Split Calculator
@@ -41,10 +41,12 @@
             Heart Rate Zone Calculator
         </div> -->
         <div class="pic1">
-            <img src="./pictures/RunningPic1.jpg">
+            <a href="./hr-zones/hr.html"><img src="./pictures/RunningPic1.jpg"> </a>
+            <!-- <div class="link-text">Heart Rate Zone</div> -->
         </div>
         <div class="pic2">
-            <img src="./pictures/RunningPic2.jpg">
+            <a href="./split-calculator/split-calculator.html"><img src="./pictures/RunningPic2.jpg"> </a>
+            <!-- <div class="link-text">Split Calculator</div> -->
         </div>
         <!-- <div class="pic3">
             <img src="./pictures/prefontaine.jpg">
